Testing Skia shaders on CPU